[package]
name = "parity-testgen"
version = "0.1.0"
authors = ["Ethcore <admin@ethcore.io>"]
build = "build.rs"

[dependencies]
ethkey = { git = "https://github.com/ethcore/ethkey.git" }
ethstore = { git = "https://github.com/ethcore/ethstore.git" }
rand = "0.3"
docopt = "0.6"
rustc-serialize = "0.3"
time = "0.1"
hyper = "0.9.6"
serde = "0.7"
serde_json = "0.7"

[build-dependencies]
serde_codegen = "0.7"
syntex = "0.33"